--- a/src/cgg/Readme
+++ b/src/cgg/Readme
@@ -1,3 +1,5 @@
 FUNCTIONAL INTERFACES AND LAMBDA EXPRESSIONS
 a functional interface has only one abstract methods
-@override annotation is used to indicate a functional interface
+@FunctionalInterface annotation is used to indicate a functional interface no limit on default and static methods
+
+
