--- a/src/cgg/Readme
+++ b/src/cgg/Readme
@@ -4,3 +4,4 @@ a functional interface has only one abstract methods
 crtl+shift+t=search a class in package
 java.lang.Runnable has single runnable abstract method run() great ex. of funtional interface
 it is possible to instantiate a functional interface with anonymous class
+we can replace anonymous class with lambda expression
