--- a/src/cgg/Readme
+++ b/src/cgg/Readme
@@ -16,3 +16,13 @@ return type-void,return type
 to extract method from a prgram ->select the line of code to insert into a method->right click ->refactor->
 ->extract method->give a method name ->ok
 now a method will be created with the given name and a call will also be made.
+LAMBDA WITH ONE PARAMETER'
+(parm)->syso("one param"+parm);
+or parm->syso("one param"+parm);
+and above two types have void return types
+MULTI PARAMETERS
+--
+(p1,p2)->syso("multi param"+p1+" "+p2);
+
+
+
